--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [tool.flit.metadata]
 module = "taxonomy"
-dist-name = "django-taxonomy"
+dist-name = "django-taxonomy2"
 author = "robert crowther"
 author-email = "rw.crowther@gmail.com"
 home-page = "https://github.com/rcrowther/django-taxonomy"
